--- a/src/app/material/index/index.component.html
+++ b/src/app/material/index/index.component.html
@@ -9,7 +9,8 @@
         <mat-card-content style=" height: 15px; margin-bottom: 8px;" class="custom-center" >
           <h3 style="text-transform: uppercase;">{{item.Name}}</h3></mat-card-content>
       </mat-card-header>
-      <mat-card-header *ngIf="item.Color === 'Rojo'" [ngStyle]="{ 'background-color': '#ff0000' }" class="custom-card-header">
+      
+  <!--     <mat-card-header *ngIf="item.Color === 'Rojo'" [ngStyle]="{ 'background-color': '#ff0000' }" class="custom-card-header">
         <mat-card-header>
           
         </mat-card-header>
@@ -25,9 +26,9 @@
         <mat-card-header>
           
         </mat-card-header>
-      </mat-card-header>
+      </mat-card-header> -->
 
-      <mat-card-header *ngIf="item.Color === 'Amarillo'" [ngStyle]="{ 'background-color': '#F4FB09' }" class="custom-card-header">
+      <mat-card-header *ngIf="item.Color" [style.background-color]="item.Color" class="custom-card-header">
         <mat-card-header>
           
         </mat-card-header>
