--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,7 +5,7 @@
     <button  mat-icon-button>
         <mat-icon>menu</mat-icon>
     </button>
-    <img src="/imgs/exa.jpg" alt="">
+    <img style="border-radius: 100%; margin: 10px;" width="55px" height="55px" src="assets/img/Logo1.jpg" alt="">
     <span>Ecosolucions O&P</span>
     <span class="example-spacer"></span>
     <button mat-button>Home</button>
