--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -3,7 +3,9 @@
         <mat-list-item>
             <button  mat-button><mat-icon>dashboard</mat-icon> Dashboard</button>
         </mat-list-item>
-       
+       <mat-list-item>
+            <button><mat-icon>account_balance_wallet</mat-icon>Balance y transacciones</button>
+       </mat-list-item>
     </mat-nav-list>
 </mat-drawer>
 <mat-dialog-content>
