--- a/src/app/core/template/template.component.html
+++ b/src/app/core/template/template.component.html
@@ -7,7 +7,9 @@
         <mat-list-item>
             <button  mat-button><mat-icon>dashboard</mat-icon> Dashboard</button>
         </mat-list-item>
-       
+        <mat-list-item>
+            <button mat-button><mat-icon>account_balance_wallet</mat-icon>Balance y transacciones</button>
+       </mat-list-item>
     </mat-nav-list>
     </mat-drawer>
     <mat-drawer-content>
