--- a/src/app/material/dialog/dialog.component.css
+++ b/src/app/material/dialog/dialog.component.css
@@ -14,6 +14,14 @@
     margin: 20px;
 }
 
+.color-circle {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-left: 5px; /* Ajusta el margen según sea necesario */
+  vertical-align: middle; /* Alinea verticalmente con el texto */
+}
   
   .dialogDivision2 {
     flex: 1;
