--- a/src/app/material/dialog/dialog.component.html
+++ b/src/app/material/dialog/dialog.component.html
@@ -15,7 +15,10 @@
                     <li><strong>Descripcion</strong>:{{ datos.Description }}</li>
                     <li><strong>Precio</strong>: {{ datos.Price | currency : "USD" }}</li>
                     <li><strong>Unidad de compra: </strong>{{datos.Unit}}</li>
-                    <li><strong>Color del material: </strong>{{datos.Color}}</li>
+                    <li><strong>Color del material: </strong>
+                        <span>{{ datos.Color }}</span>
+                        <div class="color-circle" [style.background-color]="datos.Color"></div>
+                    </li>
                     <li><strong>Centros de Reciclaje</strong>
                          <ul *ngIf="datos.RecicleCenter">
                             <li *ngFor="let item of datos.RecicleCenter">{{ item.Name }}</li>
