fix desig cretea material

--- a/src/app/material/create/create.component.html
+++ b/src/app/material/create/create.component.html
@@ -1,24 +1,27 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-<h2>CREATE</h2>
-<form [formGroup]="MaterialForm" enctype="multipart/form-data" >
+<form [formGroup]="MaterialForm" enctype="multipart/form-data" style="min-height: 87.90vh; padding: 30px;">
     <input type="hidden" formControlName="id"/>
-    <mat-card style="min-height: 87.90vh;">
-        <mat-card-header>
+    <mat-card >
+        <mat-card-header class="container">
             <h1>{{TitleForm}}</h1>
         </mat-card-header>
-        <mat-card-content>
+        <mat-card-content class="container">
             <div class="row">
                 
-                 <mat-form-field class="col-6" >
+                 <mat-form-field class="col-12" >
+                    <mat-label>Nombre</mat-label>
+
                         <input matInput formControlName="Name" maxlength="20" placeholder="Nombre">
                         <mat-error *ngIf="errorHandling('Name','required')">
                             Nombre es <strong>requerido</strong>
                         </mat-error>
                 </mat-form-field>
                           
-                <mat-form-field class="col-6" >
+                <mat-form-field class="col-12" >
+                    <mat-label>Descripcion</mat-label>
+
                     <input matInput formControlName="Description" maxlength="20" placeholder="Descripcion">
                     <mat-error *ngIf="errorHandling('Description','required')">
                         La descripcion es <strong>requerida</strong>
@@ -31,6 +34,7 @@
             <div class="row">
 
                 <mat-form-field class="col-4">
+                    <mat-label>Unidad de medida</mat-label>
                     <input matInput formControlName="Unit" maxlength="20" placeholder="Unidad">
                     <mat-error *ngIf="errorHandling('Unit','required')">
                         La la unidad de medida es <strong>requerida</strong>
@@ -38,9 +42,11 @@
                 </mat-form-field>
 
                 <mat-form-field class="col-4">
+                    <mat-label>Precio</mat-label>
+
                     <input matInput formControlName="Price" maxlength="20" placeholder="Precio">
                     <mat-error *ngIf="errorHandling('Price','required')">
-                        El precion es <strong>requerido</strong>
+                        El precio es <strong>requerido</strong>
                     </mat-error>
                     <mat-error *ngIf="errorHandling('Price','pattern')">
                         Precio debe tener <strong>números con dos decimales</strong>
@@ -48,6 +54,7 @@
                 </mat-form-field>
 
                 <mat-form-field class="col-4">
+                    <mat-label>Color</mat-label>
                     <input type="color" matInput formControlName="Color" maxlength="20" placeholder="Color">
                     <mat-error *ngIf="errorHandling('Color','required')">
                         El Color es <strong>requerido</strong>
@@ -57,19 +64,10 @@
             </div>
 
             <div class="row">
-               <!--  <mat-form-field class="col-6">
-                    <mat-select placeholder="Centros de acopio" formControlName="Center" multiple>
-                        <mat-option *ngFor="let item of CenterList" [value]="item.Id">
-                            {{item.Name}}
-                        </mat-option>
-                    </mat-select>
-                    <mat-error *ngIf="errorHandling('Unit','required')">
-                        Los centros son <strong>requeridos</strong>
-                    </mat-error>  
-                </mat-form-field> -->
+             
 
                 <div class="col-4">
-                    <input type="file" (change)="handleFileInput($event)" formControlName="Imagen" class="form-control"  aria-describedby="helpId" placeholder="">
+                    <input [ngStyle]="{ 'background-color': '#575757' }" type="file" (change)="handleFileInput($event)" formControlName="Imagen" class="form-control"  aria-describedby="helpId" placeholder="">
                       <mat-error *ngIf="errorHandling('Imagen','required')">
                            La imagen es <strong>requerida</strong>
                       </mat-error>
@@ -78,11 +76,13 @@
             </div>
             
         </mat-card-content>
-        <mat-card-actions  class="align-items-center">
-            <div class=" align-items-center">
-                <button style="width:50vw;" mat-raised-button color="accent" (click)="submitM()" >Guardar</button>
+        <mat-card-actions  class="container" style="margin: 25px;">
+            <div class="btne">
+                <button style="width:400px;" mat-raised-button color="accent" (click)="submitM()" >Guardar</button>
             </div>
-
+            <div class="btne">
+                <button style="width:400px;" mat-raised-button color="warn" (click)="discard()" >Descartar</button>
+            </div>
         </mat-card-actions>
     </mat-card>
 </form>
