--- a/src/app/material/create/create.component.css
+++ b/src/app/material/create/create.component.css
@@ -6,3 +6,13 @@
     display: table-cell;
     max-width: 600px;
 }
+.btne{
+    margin: 20px;
+}
+
+mat-card-actions{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
