--- a/src/app/material/index/index.component.html
+++ b/src/app/material/index/index.component.html
@@ -24,7 +24,7 @@
         <p> Precio: {{item.Price}}</p>
       </mat-card-content>
       <mat-card-actions  >
-        <button class="custom-button" mat-button (click)="detailMaterial(item.Id)"><mat-icon>informaation</mat-icon></button>
+        <button class="custom-button" mat-button (click)="detailMaterial(item.Id)"><mat-icon class="icon" >informacion</mat-icon></button>
         <button class="custom-button" mat-button>Canjear</button>
       </mat-card-actions>
     </mat-card>
