add cupon image

--- a/src/app/cupon/index-cupon/index-cupon.component.html
+++ b/src/app/cupon/index-cupon/index-cupon.component.html
@@ -18,7 +18,7 @@
         <div class="card" style="max-width: 33vw ; border: solid 2px; color: aliceblue; max-height: 30vh;"[ngStyle]="{ 'background-color': '#303030' }" >
             <div class="row g-0">
                 <div class="col-4" style="border-right: solid 1px;">
-                    <img class="img-fluid rounded-start" style="width: 100vw; height: 100%;" src="https://pbs.twimg.com/profile_images/464118793736683520/35BDKe1f_400x400.png">
+                    <img class="img-fluid rounded-start" style="width: 100vw; height: 100%;" src={{item.image}}>
                 </div>
                 <div class="col-8">
                     <div class="card-body" id="contendCard">
