css public site

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,4 @@
+
 #pp{
-    background-image: url('https://static.vecteezy.com/system/resources/previews/029/847/472/large_2x/hd-wallpaper-beautiful-scenery-ultra-hd-sunset-wallpapers-top-hd-landscape-green-background-4k-8k-16k-high-resolution-and-cinematicgraphy-ai-generated-photo.jpg');
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    background-size: cover;
+    background-color: #424242;
 }
