--- a/src/app/center/dialog-center/dialog-center.component.css
+++ b/src/app/center/dialog-center/dialog-center.component.css
@@ -26,3 +26,8 @@
     height: auto; /* Mantiene la proporción de la imagen */
   }
   
+
+  .example-card{
+    background-color: #1B1C26;
+    color: white;
+  }
