--- a/src/app/home/inicio/inicio.component.html
+++ b/src/app/home/inicio/inicio.component.html
@@ -12,7 +12,7 @@
         <p class="text text-large" style="margin-left: 40px; margin-right: 40px;"> Como lo hacemos? </p>
 
         <p class="text text-medium" style="margin-left: 40px; margin-right: 40px;">Se realiza el canje de materiales
-            reciclables por cupones, con los cuales obtendras ecomonedas,  que se pueden utilizar para comprar productos locales seleccionados,
+            reciclables por cupones, con los cuales obtendras ecomonedas,  que se pueden utilizar para comprar productos en locales seleccionados,
             contestar a la pregunta</p>
 
         <p class="text text-large " style="margin-top:  60px; margin-left: 40px; margin-right: 40px;">Te invitamos a ser
@@ -87,7 +87,7 @@
           </mat-grid-list>
     
     </mat-tab>
-    <mat-tab label="Centros de acopio"> 
+    <mat-tab label="Centros de acopio" class="tittle"> 
         
 
         <mat-grid-list cols="4" class="" style="min-height: 93.1vh;">
