--- a/src/app/material/dialog/dialog.component.css
+++ b/src/app/material/dialog/dialog.component.css
@@ -34,3 +34,8 @@
     height: auto; /* Mantiene la proporción de la imagen */
   }
   
+
+.example-card{
+  background-color: #1B1C26;
+  color: white;
+}
