--- a/src/app/material/dialog/dialog.component.html
+++ b/src/app/material/dialog/dialog.component.html
@@ -1,10 +1,12 @@
-<button mat-icon-button class="close-button" [mat-dialog-close]="true">
+
+<div class="example-card">
+<button mat-icon-button class="close-button " [mat-dialog-close]="true">
     <mat-icon class="close-icon" color="primary">close</mat-icon>
   </button>
-  <div *ngIf="datos" class="info">
+  <div *ngIf="datos" >
     
   
-    <mat-dialog-content>
+    <mat-dialog-content >
         
         <div class="row diagCon">
             
@@ -34,3 +36,4 @@
   
     <mat-dialog-actions> </mat-dialog-actions>
   </div>
+</div>
