--- a/src/app/cupon/create-cupon/create-cupon.component.html
+++ b/src/app/cupon/create-cupon/create-cupon.component.html
@@ -1,1 +1,98 @@
-<p>create-cupon works!</p>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+
+<form [formGroup]="CuponForm" enctype="multipart/form-data" id="formc">
+  <input type="hidden" formControlName="id" />
+  <mat-card>
+    <mat-card-header class="container">
+      <h1>{{TitleForm}}</h1>
+    </mat-card-header>
+    <mat-card-content class="container">
+      <div class="row rowe" style="">
+        <h3><strong>Información</strong></h3>
+        <mat-form-field class="col-4">
+          <mat-label>Nombre</mat-label>
+
+          <input matInput formControlName="Name" maxlength="60" placeholder="Nombre">
+          <mat-error *ngIf="errorHandling('Name','required')">
+            Nombre es <strong>requerido</strong>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field class="col-4">
+          <mat-label>Precio</mat-label>
+          <input matInput formControlName="Price" maxlength="60" placeholder="Precio">
+          <mat-error *ngIf="errorHandling('Price','required')">
+            El precio es <strong>requerido</strong>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field class="col-4">
+            <mat-label>Categorias</mat-label>
+            <mat-select placeholder="Category" formControlName="Categorias" >
+                <mat-option *ngFor="let item of categorys" [value]="item.Id">
+                    {{item.Name}}
+                </mat-option>
+            </mat-select>
+            <mat-error *ngIf="errorHandling('User','required')">
+                La categoria es <strong>requerido</strong>
+            </mat-error>  
+        </mat-form-field>
+        <mat-form-field class="col-12">
+            <mat-label>Descripción</mat-label>
+            <textarea matInput formControlName="Description"  placeholder="Ex. 100 Main St">Descripción</textarea>
+            <mat-error *ngIf="errorHandling('Description','required')">
+              La descripcion es <strong>requerida</strong>
+            </mat-error>
+          </mat-form-field>
+      </div>
+     
+
+      <div class="row rowe"  >
+        <h3><strong>Fechas de validez</strong></h3>
+        <mat-form-field class="example-full-width col-6" >
+            <mat-label>Fecha de inicio</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="ValidateDateBegin">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker [dateClass]="dateClass" #picker></mat-datepicker>
+          </mat-form-field>
+
+          <mat-form-field class="example-full-width col-6" >
+            <mat-label>Fecha final</mat-label>
+            <input matInput [matDatepicker]="picker1" formControlName="ValiteDateFinish">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+            <mat-datepicker [dateClass]="dateClass" #picker1></mat-datepicker>
+          </mat-form-field>
+      </div>
+
+      <div class="row rowe">
+       
+        <h3><strong>Archivos</strong></h3>
+       
+
+        <div class="col-12">
+            <input [ngStyle]="{ 'background-color': '#575757' }" type="file" (change)="handleFileInput($event)" formControlName="Qr" class="form-control"  aria-describedby="helpId" placeholder="">
+              <mat-error *ngIf="errorHandling('Imagen','required')">
+                   La imagen es <strong>requerida</strong>
+              </mat-error>
+          </div>
+
+        
+
+      </div>
+    </mat-card-content>
+    <mat-card-actions  class="container row" style="margin: 25px;">
+        
+            <button class="btne"  style="width: 400px;" mat-raised-button color="accent" (click)="submitForm()" >Guardar</button>
+       
+      
+            <button  class="btne"  style="width: 400px;"  mat-raised-button color="warn" (click)="submitForm()" >Descartar</button>
+      
+    </mat-card-actions>
+  </mat-card>
+</form>
